...
                    <connections>
                        <action selector="didClickPlay:" destination="-1" eventType="touchUpInside" id="lhx-rs-GHE"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YO6-fV-XRG" userLabel="ButtonShare">
                    <rect key="frame" x="327" y="321.5" width="32" height="24"/>
                    <accessibility key="accessibilityConfiguration" identifier="HeaderButtonShare"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="32" id="oly-ub-n71"/>
                    </constraints>
                    <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
                    <state key="normal" image="ic_share"/>
                    <connections>
...
