...
                    <view key="view" contentMode="scaleToFill" id="Yzy-7P-6Ra">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="EXM-Ie-RKb">
                                <rect key="frame" x="16" y="120" width="382" height="543.33333333333337"/>
                                <accessibility key="accessibilityConfiguration" identifier="ComposerTextViewPoem"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihg-T8-2fA">
                                <rect key="frame" x="185" y="60" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="ComposerButtonPlay"/>
...
