...
                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="ic_share" id="rxH-rg-uDk">
                                                    <rect key="frame" x="16" y="10" width="24" height="24"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                </imageView>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="Share"/>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="Bqu-0a-C0K" imageView="1xq-zr-Neq" style="IBUITableViewCellStyleDefault" id="0RE-hs-0n0" userLabel="Settings">
                                        <rect key="frame" x="0.0" y="260" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0RE-hs-0n0" id="Lzq-eR-LS6">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
